# bmw-scheme

./: .gitignore  BMW_Wiring_Navigator_Cursor_Project_Prompt.md  Dockerfile  README.md  render.yaml
.github/workflows/: ci.yml
docker/: nginx.conf
parser/: README.md  pyproject.toml
parser/scripts/: generate_demo.py
parser/src/bmw_wiring_parser/: __init__.py  __main__.py  cli.py  indices.py  models.py  patterns.py  pdf_export.py  pipeline.py  text_quality.py
parser/src/bmw_wiring_parser/extractors/: __init__.py  components.py  links.py  sheet_code.py  text.py
parser/tests/: test_extractors.py  test_pipeline.py  test_text_quality.py
scripts/: build-static.sh
viewer/: .gitignore  next.config.ts  package-lock.json  package.json  playwright.config.ts
viewer/e2e/: viewer.spec.ts
viewer/public/data/: .gitignore
viewer/src/app/: globals.css  layout.tsx  page.tsx
viewer/src/components/: AppShell.tsx  ComponentCard.tsx  DocumentPicker.tsx  DocumentSidebar.tsx  OverlayLayer.tsx  SchematicCanvas.tsx  SearchPanel.tsx  Toolbar.tsx
viewer/src/lib/: data.ts  labels.ts  search.test.ts  search.ts
viewer/src/store/: viewer.ts
viewer/src/types/: data.ts
