[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bmw-wiring-parser"
version = "0.1.0"
description = "Parse BMW ETM PDFs into SVG + JSON for the Wiring Navigator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pymupdf>=1.24.0",
  "typer>=0.12.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[project.scripts]
bmw-parse = "bmw_wiring_parser.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/bmw_wiring_parser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["bmw_wiring_parser"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["fitz"]
ignore_missing_imports = true
